# amazon-utils

./: .env.sample  .gitignore  README.md  pyproject.toml
scripts/: active_in_catalog.py  amazon_konus.py  amazon_txt_to_csv.py  check_asin_products.py  copy_duplicates.py  csv_to_xlsx.py  ean_to_asin.py  format_to_shopify.py  get_product_categories.py  match_listings_to_catalog.py  search_products.py  translate_names.py
scripts/converting/: amazon_to_worten.py
scripts/formatting/: csv_to_tsv.py  xlsx_to_csv.py
scripts/merging/: add_categories_to_amazon_listings.py  add_provider_to_amazon_listings.py
scripts/scraping/: get_amazon_product_images.py
scripts/translation/: translate_amazon_categories.py
templates/: Flat.File.InventoryLoader.us.xlsx  Flat.File.PriceInventory.es.xlsx  amazon_change_existing.xlsm  shopify_categories.json
templates/worten/: electrodomesticos.xlsx  fotografia_y_video.xlsx  libros_y_audiolibros.xlsx  musica.xlsx  offers.xlsx
